# copier-template-for-c-projects

./: .gitignore  CMakeLists.txt  README.dev.md  README.md  cookiecutter.json  copier.yml  pyproject.toml  {{ _copier_conf.answers_file }}.jinja
dbg/: .copier-answers.yml  datafile.yml
fuzzy/: conftest.py  (+1 more)
src/: main.c
{{ cookiecutter.project_slug }}/produces/both/nested/with-external/src/{{ cookiecutter.exename }}/: CMakeLists.txt  main.c
{{ cookiecutter.project_slug }}/produces/both/nested/wo-external/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/both/nested/wo-external/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/both/with-external/flat/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/both/with-external/flat/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/both/with-external/flat/src/: addition.c
{{ cookiecutter.project_slug }}/produces/both/with-external/nested/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/both/with-external/nested/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/both/wo-external/flat/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/both/wo-external/flat/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/both/wo-external/flat/test/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/both/wo-external/nested/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/both/wo-external/nested/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/exe/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/exe/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/exe/flat/with-external/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/exe/flat/with-external/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/exe/flat/with-external/src/: CMakeLists.txt  addition.c  subtraction.c
{{ cookiecutter.project_slug }}/produces/exe/flat/wo-external/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/exe/flat/wo-external/.codeblocks/: project.cbp  project.layout
{{ cookiecutter.project_slug }}/produces/exe/flat/wo-external/src/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/exe/nested/with-external/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/exe/nested/with-external/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/exe/nested/wo-external/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/exe/nested/wo-external/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/exe/src/: division.h
{{ cookiecutter.project_slug }}/produces/exe/with-external/flat/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/exe/with-external/flat/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/exe/with-external/flat/src/: main.c
{{ cookiecutter.project_slug }}/produces/exe/with-external/nested/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/exe/with-external/nested/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/exe/wo-external/flat/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/exe/wo-external/flat/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/exe/wo-external/nested/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/exe/wo-external/nested/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/lib/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/flat/with-external/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/flat/with-external/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/lib/flat/with-external/src/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/flat/with-external/test/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/flat/wo-external/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/flat/wo-external/.codeblocks/: project.cbp  project.layout
{{ cookiecutter.project_slug }}/produces/lib/flat/wo-external/src/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/flat/wo-external/test/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/nested/with-external/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/nested/with-external/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/lib/nested/wo-external/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/nested/wo-external/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/lib/src/: addition.c
{{ cookiecutter.project_slug }}/produces/lib/with-external/flat/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/with-external/flat/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/lib/with-external/flat/src/: addition.c  subtraction.c
{{ cookiecutter.project_slug }}/produces/lib/with-external/flat/test/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/with-external/nested/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/with-external/nested/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/lib/wo-external/flat/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/wo-external/flat/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/produces/lib/wo-external/nested/: CMakeLists.txt
{{ cookiecutter.project_slug }}/produces/lib/wo-external/nested/.codeblocks/: project.cbp
{{ cookiecutter.project_slug }}/{{ cookiecutter.external_directory }}/addition/: CMakeLists.txt
{{ cookiecutter.project_slug }}/{{ cookiecutter.external_directory }}/libtheirs/: CMakeLists.txt
{{ cookiecutter.project_slug }}/{{ cookiecutter.external_directory }}/libtheirs/src/: their_addition.c  their_subtraction.c
{{ cookiecutter.project_slug }}/{{ cookiecutter.external_directory }}/subtraction/: CMakeLists.txt
{{ cookiecutter.project_slug }}/{{ cookiecutter.external_directory }}/subtraction/src/: subtraction.c
{{ cookiecutter.project_slug }}/{{ cookiecutter.external_directory }}/their/: CMakeLists.txt
(+217 files in other folders)
